# hs-asapo

./: ChangeLog  README.md  fix-kDefaultIngestMode.patch  flake.nix  hs-asapo.cabal  remove-git-references.patch
app/: Consumer.hs  Main.hs  Producer.hs  SimpleConsumer.hs  SimpleProducer.hs
app/Asapo/: Raw.hsc
lib/Asapo/: Common.hs  Consumer.hs  Producer.hs  Raw.hsc
lib/Asapo/Either/: Common.hs  Consumer.hs  Producer.hs
lib/Asapo/Raw/: AsapoGenericRequestHeader.hsc  AsapoOpcode.hs  Common.hs  Common.hsc  Consumer.hs  Consumer.hsc  FreeHandleHack.hsc  Producer.hs  Producer.hsc
tests/: doctests.hs
