cabal-version:  3.4
name:           hs-asapo
version:        1.0.0
synopsis:       Haskell bindings for DESY’s ASAP:O
category:       System, FFI, Distributed Computing
description:    Haskell bindings for ASAP:O, a middleware platform for high-performance data analysis. More to come.
homepage:       https://github.com/pmiddend/hs-asapo
bug-reports:    https://github.com/pmiddend/hs-asapo/issues
author:         Philipp Middendorf
maintainer:     philipp.middendorf@desy.de
copyright:      2024 Philipp Middendorf
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files: ChangeLog

source-repository head
  type: git
  location: https://github.com/pmiddend/hs-asapo

common warnings
    ghc-options: -Weverything -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-missing-deriving-strategies -Wno-all-missed-specialisations -Wno-monomorphism-restriction -Wno-safe -Wno-missing-local-signatures -Wno-prepositive-qualified-module -Wno-missing-kind-signatures -Wno-missed-specializations
    
library
  import: warnings
  exposed-modules: Asapo.Raw.Common
                 , Asapo.Raw.Consumer
                 , Asapo.Raw.Producer
  build-depends:
      base >=4.7 && <5
    -- for timespec data type (is Storable)
    , clock >= 0.8.4 && < 0.9

  pkgconfig-depends: libasapo-consumer
                   , libasapo-producer
  hs-source-dirs:    lib

executable simple-producer
  import: warnings
  main-is: Producer.hs
  
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , hs-asapo
    
executable simple-consumer
  import: warnings
  main-is: Consumer.hs
  
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , hs-asapo
    -- for timespec data type (is Storable)
    , clock >= 0.8.4 && < 0.9,
